<resources>
    <string name="app_name">杀人游戏</string>
    <string name="app_name_chinese">杀人游戏</string>
    <string name="title_activity_add_player">添加新玩家</string>
    <string name="title_activity_game_setting">游戏设置</string>
    <string name="newplayer_edittext_hint">请输入玩家名字</string>
    <string name="title_activity_view_idnetity">查看身份</string>
    <string name="title_activity_show_identity">查看身份</string>
    <string name="title_activity_game_main">法官助手</string>
    <string name="title_activity_back_to_judge">请将手机交给法官</string>
    <string name="title_activity_feedback">有话要说</string>

    <string-array name="drawer_text">
        <item>杀人游戏</item>
        <item>有话要说</item>
    </string-array>

    <array name="drawer_icons">
        <item>@drawable/home</item>
        <item>@drawable/feedback</item>
    </array>


    <string name="player_number_error1">请至少添加</string>
    <string name="player_number_error2">名玩家</string>
    <string name="identity_number_error">各身份总数不等于玩家数量……</string>

    <string name="player_number_show1">现有 </string>
    <string name="player_number_show2"> 名玩家参与游戏</string>
    <string name="killer_number_hint">杀手数量:</string>
    <string name="police_number_hint">警察数量:</string>
    <string name="civilian_number_hint">平民数量:</string>

    <string name="button_after_view">看好了</string>
    <string name="after_view_hint">记住身份后请点击以上按钮，并将手机传给下一个玩家。</string>
    <string name="back_pressed_view_identity">不可以回退查看别人的身份哦</string>

    <string name="identity_killer">杀手</string>
    <string name="identity_police">警察</string>
    <string name="identity_civilian">平民</string>

    <string name="judge_button_text">开始游戏</string>

    <string name="game_hint_title"><b>法官提示词:</b></string>
    <string name="game_hint_before_game">(点击显示下一条)</string>
    <string-array name="game_hint">
        <item>天黑请闭眼……</item>
        <item>杀手请睁眼……</item>
        <item>杀手请杀人……</item>
        <item>杀手请闭眼……</item>
        <item>警察请睁眼……</item>
        <item>警察请选择一个人验明身份……</item>
        <item>警察请闭眼……</item>
        <item>天亮了……</item>
    </string-array>
    <string name="game_kill_hint">点击头像可将玩家标记为死亡</string>

    <string name="end_game_end">游戏结束</string>
    <string name="end_win">获胜</string>

    <string name="replay_question">重新开始游戏？</string>
    <string name="replay_yes">确定</string>
    <string name="replay_no">取消</string>

    <string name="feedback_textview">有话要对开发者说：</string>
    <string name="feedback_edittext_contact">跪求留个联系方式</string>
    <string name="feedback_feedback">吐槽将会被发给开发者→_→</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


</resources>
