<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/framelayout_game_main">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical">
        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:minHeight="?attr/actionBarSize"
                android:background="@color/theme"
                android:title="@string/title_activity_game_main"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>


        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:paddingLeft="@dimen/activity_horizontal_margin"
                      android:paddingRight="@dimen/activity_horizontal_margin"
                      android:paddingTop="@dimen/activity_vertical_margin"
                      android:paddingBottom="@dimen/activity_vertical_margin"
                      tools:context="nju.edu.gameofkillers.activities.GameMainActivity"
                      android:orientation="vertical">

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:id="@+id/linearlayout_game_hint"
                          android:orientation="vertical">
                <TextView
                        android:text="@string/game_hint_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"/>
                <TextView
                        android:id="@+id/textview_game_hint"
                        android:text="@string/game_hint_before_game"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"/>
            </LinearLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/game_kill_hint"
                    android:textSize="17sp"
                    android:layout_marginTop="30dp"/>


            <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" >

                <GridLayout
                        android:id="@+id/layout_game_main_cards"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                </GridLayout>
            </ScrollView>

        </LinearLayout>
    </LinearLayout>
</FrameLayout>