<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context="nju.edu.gameofkillers.activities.ShowIdentityActivity"
              android:orientation="vertical">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:minHeight="?attr/actionBarSize"
            android:background="@color/theme"
            android:title="@string/title_activity_show_identity"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin">

            <TextView
                    android:id="@+id/textview_identity_show_identity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="100sp"
                    android:layout_marginTop="50dp"/>

            <Button
                    android:id="@+id/button_after_view"
                    android:layout_width="200dp"
                    android:layout_height="70dp"
                    android:text="@string/button_after_view"
                    android:textSize="40sp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/button_background"
                    android:layout_marginTop="40dp"
                    android:textColor="@android:color/white"/>

            <TextView
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:text="@string/after_view_hint"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:textSize="20sp"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
