<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              tools:context="nju.edu.gameofkillers.activities.GameSettingActivity"
              android:orientation="vertical">

    <!--ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"-->

        <TextView
                android:id="@+id/textview_player_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"/>

        <TextView
                android:text="@string/title_activity_game_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:layout_marginTop="40dp"/>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/textview_killer_num_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textSize="20sp"
                    android:text="@string/killer_number_hint"/>

            <nju.edu.gameofkillers.views.NumberPickerView
                    android:id="@+id/numberpicker_killernum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/textview_killer_num_hint"
                    android:layout_marginLeft="50dp"
                    android:layout_alignBottom="@id/textview_killer_num_hint"/>

            <TextView
                    android:id="@+id/textview_police_num_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textSize="20sp"
                    android:text="@string/police_number_hint"
                    android:layout_below="@id/textview_killer_num_hint"/>

            <nju.edu.gameofkillers.views.NumberPickerView
                    android:id="@+id/numberpicker_policenum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/textview_police_num_hint"
                    android:layout_alignLeft="@id/numberpicker_killernum"
                    android:layout_alignBottom="@id/textview_police_num_hint"/>

            <TextView
                    android:id="@+id/textview_civilian_num_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textSize="20sp"
                    android:text="@string/civilian_number_hint"
                    android:layout_below="@id/textview_police_num_hint"/>

            <nju.edu.gameofkillers.views.NumberPickerView
                    android:id="@+id/numberpicker_civiliannum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/textview_civilian_num_hint"
                    android:layout_alignLeft="@id/numberpicker_killernum"
                    android:layout_alignBottom="@id/textview_civilian_num_hint"/>

        </RelativeLayout>

    <!--/ScrollView-->


</LinearLayout>
